--- a/generic.html
+++ b/generic.html
@@ -62,7 +62,7 @@
             </p>
 
             <p>
-              After leaing my job as Health and Safety Officer at the biotech firm Ingenza in 2019, I decided to combine the knowledge I had picked up throughout my professional career and combine it with my existing knowledge of computers and networking to start my next career as a web developer.
+              After leaving my job as Health and Safety Officer at the biotech firm Ingenza in 2019, I decided to combine the knowledge I had picked up throughout my professional career and combine it with my existing knowledge of computers and networking to start my next career as a web developer.
             </p>
 
             <p>
