--- a/generic.html
+++ b/generic.html
@@ -51,7 +51,8 @@
         <!-- Content -->
         <div class="wrapper">
           <div class="inner">
-            <h3 class="major">Bio</h3>
+            <img src="images/juliusGoddard2020.jpg" style="align-items: center">
+            <h3> Julius Goddard, CEO</h3>
             <p>
               I founded Web For Professionals in 2020 to provide web development services to large industrial businesses
               and local entrepreneurs.
