Added Belial Skank Website

--- a/generic.html
+++ b/generic.html
@@ -80,15 +80,14 @@
 
             <section class="features">
               <article>
-                <a href="https://quirky-spence-51972a.netlify.app/" class="image"
-                  ><img src="images/logo.jpg" alt=""
+                <a href="http://belialskank.com" class="image"
+                  ><img src="images/belialskank.jpg" alt=""
                 /></a>
-                <h3 class="major">Matthew Tsang Photography</h3>
+                <h3 class="major">Belial Skank: DJ, Musician, Producer</h3>
                 <p>
-                  In 2020, Web For Professionals designed a website for Matthew
-                  Tsang Photography, showcasing his talents and repertoire.
+                  In July 2020, Web For Professionals created an entire website and blog using WordPress for DJ, Musician and Producer: Belial Skank.
                 </p>
-                <a href="https://quirky-spence-51972a.netlify.app/" class="special">View Website</a>
+                <a href="http://belialskank.com" class="special">View Website</a>
               </article>
               <article>
                 <a href="https://trusting-khorana-b3e5ed.netlify.app/" class="image"
@@ -100,6 +99,18 @@
                 </p>
                 <a href="https://trusting-khorana-b3e5ed.netlify.app/" class="special">View Website</a>
               </article>
+              <article>
+                <a href="http://matthewtsangphotography.com" class="image"
+                  ><img src="images/logo.jpg" alt=""
+                /></a>
+                <h3 class="major">Matthew Tsang Photography</h3>
+                <p>
+                  In 2020, Web For Professionals designed a website for Matthew
+                  Tsang Photography, showcasing his talents and repertoire.
+                </p>
+                <a href="https://quirky-spence-51972a.netlify.app/" class="special">View Website</a>
+              </article>
+     
             </section>
           </div>
         </div>
