--- a/index.html
+++ b/index.html
@@ -142,19 +142,19 @@
                 <a href="#" class="image"
                   ><img src="images/writing.jfif" alt=""
                 /></a>
-                <h3 class="major">Content Writing</h3>
+                <h3 class="major">Scripts and Bug Fixes</h3>
                 <p>
-              Promote your website effectively using our optional content writing service. 
+              Got an issue with WordPress, Wix, HTML, CSS or Javascript? Web For Professionals will be delighted to help you. 
                 </p>
                 
               </article>
               <article>
                 <a href="#" class="image"
-                  ><img src="images/UIUX.jfif" alt=""
+                  ><img src="images/wordpress.jpg" alt=""
                 /></a>
-                <h3 class="major">UI/UX Design</h3>
+                <h3 class="major">WordPress</h3>
                 <p>
-                 Make your websites stand out and look as professional as possible with services in UI/UX design.
+                 Web For Professionals can provide you with any blog, e-commerce or professional website using WordPress, Elementor and WooCommerce.
                 </p>
               
               </article>
