Added Two New Websites

--- a/generic.html
+++ b/generic.html
@@ -80,6 +80,16 @@
 
             <section class="features">
               <article>
+                <a href="http://mayhemhardcore.com" class="image"
+                  ><img src="images/coverpic.jpg" alt=""
+                /></a>
+                <h3 class="major">Mayhem Scotland: Club Night</h3>
+                <p>
+                  Web For Professionals made a website and blog for the Scottish club night: Mayhem.
+                </p>
+                <a href="http://mayhemhardcore.com" class="special">View Website</a>
+              </article>
+              <article>
                 <a href="http://belialskank.com" class="image"
                   ><img src="images/belialskank.jpg" alt=""
                 /></a>
@@ -109,6 +119,16 @@
                   Tsang Photography, showcasing his talents and repertoire.
                 </p>
                 <a href="https://quirky-spence-51972a.netlify.app/" class="special">View Website</a>
+              </article>
+              <article>
+                <a href="http://millennialsamongtheruins.com" class="image"
+                  ><img src="images/milenials.jpg" alt=""
+                /></a>
+                <h3 class="major">Millennials Among The Ruins: Novel By Oswald Kuragin</h3>
+                <p>
+                  Web For Professionals worked with author Oswald Kuragin to produce a WordPress website to promote his book: Millennials Among The Ruins
+                </p>
+                <a href="http://millennialsamongtheruins.com" class="special">View Website</a>
               </article>
      
             </section>
