--- a/generic.html
+++ b/generic.html
@@ -80,6 +80,16 @@
 
             <section class="features">
               <article>
+                <a href="http://babkaedinburgh.com" class="image"
+                  ><img src="images/babka.jpg" alt=""
+                /></a>
+                <h3 class="major">Babka Edinburgh</h3>
+                <p>
+                  In August 2020, Web For Professionals collaborated with the organic cafe in Edinburgh: Babka to produce this beautiful landing page from scratch.
+                </p>
+                <a href="http://babkaedinburgh.com" class="special">View Website</a>
+              </article>
+              <article>
                 <a href="http://mayhemhardcore.com" class="image"
                   ><img src="images/coverpic.jpg" alt=""
                 /></a>
