--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
-										<form method="post" action="https://formspree.io/xzbjrqjb">
+										<form method="POST" data-netlify="true">
 											<div class="fields">
 												<div class="field half">
 													<label for="name">Name</label>
@@ -127,6 +127,9 @@
 												<div class="field">
 													<label for="message">Message</label>
 													<textarea name="message" id="message" rows="4"></textarea>
+												</div>
+												<div class="field">
+													<div data-netlify-recaptcha="true"></div>
 												</div>
 											</div>
 											<ul class="actions">
