--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 							<section class="panel spotlight large left">
 								<div class="content span-5">
 									<h2 class="major">My Profile</h2>
-									<p>I am a highly creative and perfectionist web designer who serves clients all over the world, providing businesses with a powerful online presence and giving them more clients </p>
+									<p>I am a highly creative and perfectionist web designer who serves clients all over the world, providing businesses with a powerful online presence and giving them more clients.</p>
+									<p>I also work as a consultant for STEP-IN Management, who are assisting the pharmaceutical company: Daiichi Sankyo.</p>
 									<p>The post-COVID world will present many difficulties but also many exciting challenges. My motto is that there are no problems, only opportunities. </p>
 									<p>I am looking to collaborate and can provide you my expertise which I have built up through working with various different technologies with an international client base. </p>
 								</div>
