--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Julius Goddard - Interactive CV
+		<title>Julius Goddard - Interactive CV For Mr Kaji
 		</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -39,12 +39,12 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Who I Am</h2>
-									<p style="color: white">I am a freelance web designer, serving clients both in the UK and the US</p>
-									<p style="color: white">In this competitive market, I keep regular clients by maintaining very high quality standards</p>
+									<h2 class="major">Web For Professionals</h2>
+									<p style="color: white">I formed Web For Professionals in 2019. The company has established a growing list of clients both in the UK and the US</p>
+									<p style="color: white">In this competitive market, I secure client loyalty by maintaining very high quality standards</p>
 									<p style="color: white">I provide the following services:</p>
 									<ul>
-										<li style="color: white">Online Shops</li>
+										<li style="color: white">E-Commerce Websites</li>
 										<li style="color: white">Multi-Page websites</li>
 										<li style="color: white">Portfolios</li>
 										<li style="color: white">Online Reservation Systems</li>
@@ -60,7 +60,7 @@
 							<section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">Technology</h2>
-									<p>I am fully versed in modern web technology, including and not limited to:</p>
+									<p>I am fully versed in modern web technology, included but not limited to:</p>
 									<ul>
 										<li style="color: white">HTML5 / CSS3 / Javascript</li>
 										<li style="color: white">React.JS / Node.JS / MongoDB</li>
@@ -84,21 +84,6 @@
 								</div>
 							</section>
 
-						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight large left">
-								<div class="content span-5">
-									<h2 class="major">My Profile</h2>
-									<p>I am a highly creative and perfectionist web designer who serves clients all over the world, providing businesses with a powerful online presence and giving them more clients.</p>
-									<p>I also work as a consultant for STEP-IN Management, who are assisting the pharmaceutical company: Daiichi Sankyo.</p>
-									<p>The post-COVID world will present many difficulties but also many exciting challenges. My motto is that there are no problems, only opportunities. </p>
-									<p>I am looking to collaborate and can provide you my expertise which I have built up through working with various different technologies with an international client base. </p>
-								</div>
-								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic03.jpg" alt="" />
-								</div>
-							</section>
-
-						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color2">
 									<h2 class="major">Portfolio</h2>
@@ -121,15 +106,27 @@
 								</div>
 							</section>
 
+						<!-- Panel (Spotlight) -->
+							<section class="panel spotlight large left">
+								<div class="content span-5">
+									<h2 class="major">Consultancy</h2>
+									<p>In addition to my Web For Professionals business, I also work as a freelance management consultant. I currently have two major clients.</p>
+									<p>Amalga Technologies Ltd, a UK industrial biotechnology development company which is currently developing multifunctional algae for use as a feed additive in collaboration with the Institute of Animal Health, Beijing.</p>
+									<p>Step-In Management, a UK consultancy developing SOPs (standard operating procedures) for a top 3 Japanese pharmaceutical company. </p>
+								</div>
+								<div class="image filtered tinted" data-position="top right">
+									<img src="images/pic03.jpg" alt="" />
+								</div>
+							</section>
+
+						<!-- Panel -->
+							
+
 							<section class="panel">
 								<div class="intro color2">
-									<h2 class="major">Interests</h2>
-									<ul>
-										<li style="color: white">Writing Novels</li>
-										<li style="color: white">Producing Music</li>
-										<li style="color: white">Studying Theology</li>
-										<li style="color: white">Lifting Weights</li>
-									</ul>
+									<h2 class="major">Collaboration</h2>
+									<p>I am highly creative and a perfectionist. The post-Covid world will present many difficulties but also many exciting challenges. My motto is there are no problems - only opportunities.</p>
+									<p>Accordingly, I would be very interested to discuss collaboration with you, Mr Kaji. Please see the Contact form on the next page. I hope to hear from you shortly.</p>
 								</div>
 								</section>
 
