--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Julius Goddard - Interactive CV For Mr Kaji
+		<title>Julius Goddard - Interactive CV For Mr Kazi
 		</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -126,7 +126,7 @@
 								<div class="intro color2">
 									<h2 class="major">Collaboration</h2>
 									<p>I am highly creative and a perfectionist. The post-Covid world will present many difficulties but also many exciting challenges. My motto is there are no problems - only opportunities.</p>
-									<p>Accordingly, I would be very interested to discuss collaboration with you, Mr Kaji. Please see the Contact form on the next page. I hope to hear from you shortly.</p>
+									<p>Accordingly, I would be very interested to discuss collaboration with you, Mr Kazi. Please see the Contact form on the next page. I hope to hear from you shortly.</p>
 								</div>
 								</section>
 
